Use compact array notation
- Remove redundant parentheses
- Use valueOf()
- Use diamonds
- Use for-each